clients/web-app/src/App.scss
@import 'fonts';

* {
  box-sizing: border-box;
  font-family: 'PP Neue Montreal', sans-serif;
  font-weight: 500;
  font-style: normal;
  p,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin: 0;
  }
}
html,
body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;
}

.mtt-app {
  display: flex;
  height: 100dvh;
  width: 100vw;
  background: white;
  overflow: hidden;
}

.mtt-button {
  color: #fff;
  border-radius: 12px;
  background: #493bff;
  box-shadow: 0 1px 1px -0.5px rgba(0, 0, 0, 0.06), 0px 3px 3px -1.5px rgba(0, 0, 0, 0.06);
  padding: 10px 60px;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
  font-size: 14px;
  line-height: 20px;
}

.mtt-button:hover {
  background-color: #3b2bdb;
}

.mtt-modal {
  position: absolute;
  top: 40px;
  left: 40px;
  right: 40px;
  bottom: 40px;
  background-color: white;
  max-width: 90%;
  width: 460px;
  margin: auto;
  border-radius: 6px;
  inset: 50% auto auto 50%;
  transform: translate(-50%, -50%);
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
}

.mtt-modal-overlay {
  background-color: rgba(0, 0, 0, 0.06);
  backdrop-filter: blur(4px);
  z-index: 999;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.mtt-modal-buttons {
  display: flex;
  justify-content: flex-end;
  gap: 10px;
  padding: 16px 24px;
  .mtt-modal-button {
    padding: 0 18px;
    line-height: 38px;
    border-radius: 8px;
    border: 1px solid #f3eded;
    background: white;
    cursor: pointer;
    color: #474747;
    font-size: 14px;
    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
    &.button-open {
      color: #fff;
      background: #493bff;
    }
  }
}

.mtt-input-wrapper {
  position: relative;
  margin-bottom: 27px;
  .mtt-input-left-icon {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 15px;
    width: 16px;
  }
  .mtt-input-right-icon {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 15px;
    width: 16px;
  }
}
.mtt-modal-error {
  color: #f73636;
  position: absolute;
  top: 100%;
  font-size: 14px;
}

.mtt-icon-rotate {
  animation: rotateWithTranslate 2s linear infinite;
}

@keyframes rotateWithTranslate {
  0% {
    transform: translateY(-50%) rotate(0deg);
  }
  50% {
    transform: translateY(-50%) rotate(140deg);
  }
  100% {
    transform: translateY(-50%) rotate(360deg);
  }
}

.mtt-modal-button {
  width: 100%;
  color: white;
  background: #473cfb;
  text-align: center;
  font-size: 14px;
  border-radius: 12px;
  font-weight: 400;
  padding: 10px;
  cursor: pointer;
}

.mp-session-debugger-button {
  right: unset !important;
  left: 32px !important;
  bottom: 32px !important;
  border-radius: 36px 0 0 36px !important;
  z-index: 9 !important;
  &.no-draggable {
    position: absolute !important;
    &:not([data-tooltip='']):before {
      display: none !important;
    }
  }
}

.mp-session-debugger-popover {
  bottom: 100px !important;
}

@media screen and (max-width: 768px) {
  .mtt-app {
    flex-direction: column;
  }
  .mp-session-debugger-button {
    right: 10px !important;
    left: unset !important;
    bottom: unset !important;
    top: 10px !important;
    border-radius: 36px !important;
    &.no-draggable:not([data-tooltip='']):before {
      left: unset !important;
      right: 100% !important;
      display: block !important;
      transform: translateX(-8px) !important;
      top: 6px !important;
    }
  }
  .mp-session-debugger-popover {
    bottom: unset !important;
    top: 65px !important;
  }
}

